<resources>
    <string name="app_name">AuthorizationKotlin</string>
    <string name="title">Authorization</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Sign in</string>
    <string name="register">Sign up</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string-array name="genderTypes">
        <item>male</item>
        <item>female</item>
        <item>not defined yet</item>
    </string-array>

</resources>
